--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="pages/blog1.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="pages/blog1.html" class="image fit"><img src="images/Capture.PNG" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>Cube Boi</h3>
 										</header>
 									</article>
 									<article class="item">
