--- a/pages/blog3.html
+++ b/pages/blog3.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>AStar</title>
+		<title>FlockAI + Genatic Algorithm</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -21,40 +21,41 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>AStar Algorithm</h1>
-							<p>A Custom A* path-finding algorithm i made during one my game-engine course at ISI,Montreal.</p>
+							<h1>FlockAI + Genatic Algorithm</h1>
+							<p>A Flock AI for school of Fish along with genetic mutation</p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/astar_debug.PNG" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/flock.PNG" alt="" /></span>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>Gameplay</h2>
-							<p><strong>A* Path-finding,</strong>is used by almost all 3d as well as 2d game engines for AI path-finding.</p>
+							<h2>Simulation</h2>
+							<p><strong>Flock AI,</strong>In the natural world, organisms exhibit certain behaviors when traveling in groups. This phenomenon, also known as flocking, occurs at both microscopic scales (bacteria) and macroscopic scales (fish). Using computers, these patterns can be simulated by creating simple rules and combining them. This is known as emergent behavior, and can be used in games to simulate chaotic or life-like group movement.</p>
 							<br>
-							<p>A* is a graph traversal and path search algorithm, which is often used in computer science due to its completeness, optimality, and optimal efficiency. One major practical drawback is its {\displaystyle O(b^{d})}O(b^d) space complexity, as it stores all generated nodes in memory. Thus, in practical travel-routing systems, it is generally outperformed by algorithms which can pre-process the graph to attain better performance,as well as memory-bounded approaches; however, A* is still the best solution in many cases especially for AI implementation in 3D Games.</p>
+							<p><strong>Here,</strong>i have implemented a flock AI algorithm along with genetic mutation which breeds fishes according to natural selection.It restarts simulation with newer fishes with different attributes selected by the genetic breeding function after regular time intervals.It takes different parameters e.g. energy, lifespan, food amount etc and sets its influence vector multipliers.</p>
 						</header>
 						<div class="content">
-							
-							<span class="image main"><img src="images/astar_gameplay.gif" alt="" /></span>
-							<span class="image main"><img src="images/astar_code.gif" alt="" /></span>
+							<p><strong>GENERATION: 1</strong></p>
+							<span class="image main"><img src="images/flock_gameplay.gif" alt="" /></span>
+							<p><strong>GENERATION: 1698</strong></p>
+							<span class="image main"><img src="images/flock_gameplayend.gif" alt="" /></span>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Play</h2>
+							<h2>Test YourSelf</h2>
 						</header>
 						<div class="content">
 							<p><strong>Link: </strong>
-							<a href = "https://jeel-patel.itch.io/astartproject" target = "_blank">Itch.io</a>
+							<a href = "https://jeel-patel.itch.io/flock-ai" target = "_blank">Itch.io</a>
 							</p>
 							
 						</div>
