--- a/index.html
+++ b/index.html
@@ -60,14 +60,11 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! I'm <strong>Jeel Patel</strong>,Welcome to my Portfolio.<br />
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">Check it Out !</a>
 							</footer>
 
 						</div>
@@ -88,18 +85,37 @@
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
+									<h2 class="alt">
+										<header>
+									<strong>Unity3D</strong>
+										</header>
+									</h2>
+
+									<article class="item">
+											<a href="pages/blog4.html" class="image fit"><img src="images/goap.png" alt="" /></a>
+											<header>
+												<h3>G.O.A.P (Goal Oriented Action Planning)</h3>
+											</header>
+										</article>
+									<article class="item">
+										<a href="pages/blog3.html" class="image fit"><img src="images/flock.PNG" alt="" /></a>
+										<header>
+											<h3>Flock AI + Genetic Algorithm</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="pages/blog2.html" class="image fit"><img src="images/astar_debug.PNG" alt="" /></a>
+										<header>
+											<h3>A* Path-finding AI</h3>
+										</header>
+									</article>
 									<article class="item">
 										<a href="pages/blog1.html" class="image fit"><img src="images/Capture.PNG" alt="" /></a>
 										<header>
 											<h3>Cube Boi</h3>
 										</header>
 									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-										<header>
-											<h3>Rhoncus Semper</h3>
-										</header>
-									</article>
+
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
@@ -107,11 +123,11 @@
 										<header>
 											<h3>Magna Nullam</h3>
 										</header>
-									</article>
+									</article>									
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="pages/blog1.html" class="image fit"><img src="images/Capture.PNG" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Cube Boi</h3>
 										</header>
 									</article>
 								</div>
