--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Jeel Patel</strong>,Welcome to my Portfolio.<br />
+								<h2 class="alt">Hi! I'm <strong>Jeel Patel</strong>,Welcome to my Portfolio !<br />
 							</header>
 
 							<footer>
