--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
 									</h2>
 
 									<article class="item">
+										<a href="pages/blog5.html" class="image fit"><img src="images/airraid.jpg" alt="" /></a>
+										<header>
+											<h3>Air Raid 2.0</h3>
+										</header>
+									</article>
+
+									<article class="item">
 											<a href="pages/blog4.html" class="image fit"><img src="images/goap.png" alt="" /></a>
 											<header>
 												<h3>G.O.A.P (Goal Oriented Action Planning)</h3>
@@ -118,6 +125,11 @@
 
 								</div>
 								<div class="col-4 col-12-mobile">
+									<h2 class="alt">
+										<header>
+									<strong>Unreal Engine 4</strong>
+										</header>
+									</h2>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 										<header>
@@ -132,6 +144,11 @@
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
+									<h2 class="alt">
+										<header>
+									<strong>Mix</strong>
+										</header>
+									</h2>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
