--- a/index.html
+++ b/index.html
@@ -90,20 +90,24 @@
 									<strong>Unity3D</strong>
 										</header>
 									</h2>
-
+									<article class="item">
+										<a href="pages/blog6.html" class="image fit"><img src="images/xsinistar.jpg" alt="" /></a>
+										<header>
+											<h3>Nier X Asteroids</h3>
+										</header>
+									</article>
 									<article class="item">
 										<a href="pages/blog5.html" class="image fit"><img src="images/airraid.jpg" alt="" /></a>
 										<header>
 											<h3>Air Raid 2.0</h3>
 										</header>
 									</article>
-
 									<article class="item">
 											<a href="pages/blog4.html" class="image fit"><img src="images/goap.png" alt="" /></a>
 											<header>
 												<h3>G.O.A.P (Goal Oriented Action Planning)</h3>
 											</header>
-										</article>
+									</article>
 									<article class="item">
 										<a href="pages/blog3.html" class="image fit"><img src="images/flock.PNG" alt="" /></a>
 										<header>
