--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
 										</header>
 									</h2>
 									<article class="item">
+										<a href="pages/blog7.html" class="image fit"><img src="images/runnergame.jpg" alt="" /></a>
+										<header>
+											<h3>Mirror's Edge Clone (Android)</h3>
+										</header>
+									</article>
+									<article class="item">
 										<a href="pages/blog6.html" class="image fit"><img src="images/xsinistar.jpg" alt="" /></a>
 										<header>
 											<h3>Nier X Asteroids</h3>
