--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://twitter.com/RealDedpul_" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.facebook.com/JeelPatelOfficial" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://github.com/jeelpatelofficial" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="mailto:dedpulr6s@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -64,7 +63,7 @@
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Check it Out !</a>
+								<a href="pages/Jeel's Resume.pdf" class="button scrolly">Check out my Resume !</a>
 							</footer>
 
 						</div>
@@ -141,15 +140,21 @@
 										</header>
 									</h2>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="pages/blog10.html" class="image fit"><img src="images/unrealcover.jpg" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Cover System</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="pages/blog8" class="image fit"><img src="images/unrealik.jpg" alt="" /></a>
+										<header>
+											<h3>Foot IK System</h3>
 										</header>
 									</article>									
 									<article class="item">
-										<a href="pages/blog1.html" class="image fit"><img src="images/Capture.PNG" alt="" /></a>
+										<a href="pages/blog9.html" class="image fit"><img src="images/unrealsurfaceeffects.jpg" alt="" /></a>
 										<header>
-											<h3>Cube Boi</h3>
+											<h3>Surface Effects</h3>
 										</header>
 									</article>
 								</div>
@@ -160,13 +165,13 @@
 										</header>
 									</h2>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/clionopengl.jpg" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>OpenGL 2.3</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/sdl.jpg" alt="" /></a>
 										<header>
 											<h3>Orci Convallis</h3>
 										</header>
@@ -187,12 +192,7 @@
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>I have completed a Video Game Programming diploma. I’m focused,passionate and can adapt easily to changes and work very well with a team as well as solo.</p>
 
 						</div>
 					</section>
@@ -202,27 +202,11 @@
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<h2><Strong>Contact</Strong></h2>
 							</header>
-
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
-
-							<form method="post" action="#">
-								<div class="row">
-									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
-									<div class="col-12">
-										<textarea name="message" placeholder="Message"></textarea>
-									</div>
-									<div class="col-12">
-										<input type="submit" value="Send Message" />
-									</div>
-								</div>
-							</form>
-
+							<h1><Strong></Strong>Jeel Patel</h1><br>
+							<h1><Strong></Strong>514-210-8969</h1><br>
+							<h1><Strong></Strong>dedpulr6s@gmail.com</h1><br>
 						</div>
 					</section>
 
@@ -233,7 +217,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Dedpul Portfolio. All rights reserved.
 					</ul>
 
 			</div>
