--- a/index.html
+++ b/index.html
@@ -80,13 +80,9 @@
 
 							
 							<header>
-								<h2>Portfolio</h2>
+								<h2>My Projects</h2><br>
+								<p>------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
 							</header>
-
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
