--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 								<div class="col-4 col-12-mobile">
 									<h2 class="alt">
 										<header>
-									<strong>Mix</strong>
+									<strong>OpenGL/CPP</strong>
 										</header>
 									</h2>
 									<article class="item">
