--- a/pages/blog1.html
+++ b/pages/blog1.html
@@ -53,6 +53,9 @@
 							<p><strong>Link: </strong>
 							<a href = "https://jeel-patel.itch.io/cube-boi" target = "_blank">Itch.io</a>
 							</p>
+							<p><strong>Github: </strong>
+								<a href = "https://github.com/jeelpatelofficial/CubeBoi" target = "_blank">Itch.io</a>
+								</p>
 							
 						</div>
 					</section>
