--- a/pages/blog2.html
+++ b/pages/blog2.html
@@ -56,8 +56,8 @@
 							<p><strong>Link: </strong>
 							<a href = "https://jeel-patel.itch.io/astartproject" target = "_blank">Itch.io</a>
 							</p>
-							<p><strong>GitHub: </strong>
-								<a href = "https://github.com/jeelpatelofficial/AStarCustom/tree/master" target = "_blank">Itch.io</a>
+							<p><strong>Source: </strong>
+								<a href = "https://github.com/jeelpatelofficial/AStarCustom/tree/master" target = "_blank">Github</a>
 								</p>
 							
 							
