--- a/pages/blog9.html
+++ b/pages/blog9.html
@@ -61,6 +61,9 @@
 							<p><strong>Link: </strong>
 							<a href = "https://keizerzilla.itch.io/syderal-kombat" target = "_blank">Itch.io</a>
 							</p>
+							<p><strong>Source: </strong>
+								<a href = "https://github.com/jeelpatelofficial/OpenGl" target = "_blank">GitHub</a>
+								</p>
 							
 						</div>
 					</section>
