--- a/pages/blog1.html
+++ b/pages/blog1.html
@@ -53,8 +53,8 @@
 							<p><strong>Link: </strong>
 							<a href = "https://jeel-patel.itch.io/cube-boi" target = "_blank">Itch.io</a>
 							</p>
-							<p><strong>Github: </strong>
-								<a href = "https://github.com/jeelpatelofficial/CubeBoi" target = "_blank">Itch.io</a>
+							<p><strong>Source: </strong>
+								<a href = "https://github.com/jeelpatelofficial/CubeBoi" target = "_blank">GitHub</a>
 								</p>
 							
 						</div>
