--- a/index.html
+++ b/index.html
@@ -127,7 +127,12 @@
 											<h3>Future Frontier</h3>
 										</header>
 									</article>
-									
+									<article class="item">
+										<a href="pages/aitool/index.html" class="image fit"><img src="images/graph.gif" alt="" /></a>
+										<header>
+											<h3>AI Advanced Tool (Unity3D)</h3>
+										</header>
+									</article>
 									<article class="item">
 										<a href="pages/blog1.html" class="image fit"><img src="images/Capture.PNG" alt="" /></a>
 										<header>
