--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="pages/jok/images/jokvideo.mp4" alt="" /></span>
+							<span class="image avatar48"><img src="images/dp.PNG" alt="" /></span>
 							<h1 id="title">Jeel Patel</h1>
 							<p>Video Game Developer</p>
 						</div>
