--- a/pages/blog7.html
+++ b/pages/blog7.html
@@ -104,7 +104,7 @@
 							<br>
 							<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 							<h2>Results:</h2>
-							<p><strong>Here,</strong>The GOAP agent has goal state "HasWater" so on first cycle it fetches water closest to it, But on second cycle</p>
+							<p><strong>Here,</strong>you can test yourself inside your browser and test the level.</p>
 							
 						</header>
 						<div class="content">
@@ -134,7 +134,7 @@
 						</header>
 						<div class="content">
 							<p><strong>Link: </strong>
-							<a href = "https://jeel-patel.itch.io/goap" target = "_blank">Itch.io</a>
+							<a href = "https://jeel-patel.itch.io/runner-game" target = "_blank">Itch.io</a>
 							</p>
 							
 						</div>
