--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
 										</header>
 									</article>
 									<article class="item">
+										<a href="pages/droneai/index.html" class="image fit"><img src="images/drone.jpg" alt="" /></a>
+										<header>
+											<h3>Drone AI</h3>
+										</header>
+									</article>
+									<article class="item">
 										<a href="pages/blog6.html" class="image fit"><img src="images/xsinistar.jpg" alt="" /></a>
 										<header>
 											<h3>Nier X Asteroids</h3>
