--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/dp.PNG" alt="" /></span>
 							<h1 id="title">Jeel Patel</h1>
-							<p>Video Game Developer</p>
+							<p>Game AI Programmer</p>
 						</div>
 
 					<!-- Nav -->
