--- a/index.html
+++ b/index.html
@@ -76,14 +76,11 @@
 
 				<!-- Portfolio -->
 					<section id="portfolio" class="two">
-						<div class="container">
-
-							
+						<div class="container">							
 							<header>
-								<h2>My Projects</h2><br>
+								<h2>My Projects</h2>
 								<p>----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
 							</header>
-
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<h2 class="alt">
